ch4/networkPolicy/allow-ns-king.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hayhay-net-policy-2
spec:
  podSelector: {}
  ingress:
  - from: 
    - namespaceSelector: 
        matchLabels:
           name: king
