ch4/networkPolicy/allow-within-project.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace

spec:
  podSelector: {}

  ingress:
  - from:
    - podSelector: {}
