ch4/networkPolicy/deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-net-policy
spec:
  podSelector: {}
